--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -19,11 +19,11 @@
 }
 
 .specialText{
-    color: var(--orange);
+    color: var(--orange-2);
     font-size: var(--size-4);
     text-transform: uppercase;
 
-    border-bottom: 2px solid var(--orange);
+    border-bottom: 2px solid var(--orange-2);
     width: 15%;
     padding-bottom: 5px;
 }
