--- a/src/components/About/style.module.scss
+++ b/src/components/About/style.module.scss
@@ -1,15 +1,16 @@
 .box {
-    max-width: 767px;
-    height: 50vh;
-    padding: 1rem;
-
+    padding: 3rem 0;
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: center;
 
     .boxInfo {
         box-sizing: border-box;
+        width: 86%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         h1 {
             padding: 1rem 0;
@@ -21,31 +22,25 @@
     }
 
     .img {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        img {
-            min-width: 350px;
-        }
-
+        display: none;
     }
 
     .boxLinks {
         display: flex;
         flex-direction: column;
-
+        
         ul {
             display: flex;
             justify-content: space-between;
             width: 30%;
             min-width: 120px;
             color: var(--white);
-
+            gap: 10px;
             li {
                 padding: 5px;
                 border-radius: 50%;
                 border: 2.5px solid var(--orange);
+                height: auto;
 
                 &:hover {
                     background-color: var(--orange);
@@ -65,15 +60,17 @@
         }
     }
 
-    @media(min-width:768px) {
+    @media(min-width: 768px){
         max-width: 1200px;
-        width: 100%;
-        flex-direction: row;
+        padding: 24px 0 5px 0;
+        gap: 20px;
+
+        display: flex;
+        justify-content: center;
         align-items: center;
 
         .boxInfo {
-            width: 50%;
-            padding: 0 10px;
+            width: 60%;
 
             h1 {
                 margin-bottom: 2rem;
@@ -85,12 +82,22 @@
             }
         }
 
-        .boxLinks {
-            ul {
-                min-width: 160px;
+        .img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
+            img {
+                min-width: 200px;
+                max-width: 250px;
+                border-radius: 580px;
+                border: 5px solid var(--orange);
+                box-shadow: rgba(249, 88, 66, 0.25) 0px -50px 100px -20px, rgba(249, 88, 66, 0.3) 0px 30px 60px -30px, rgba(249, 88, 66, 0.35) 0px -2px 6px 0px inset;                ;
             }
         }
+    }
+    @media(min-width: 678px){
+        
 
 
     }
