--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -4,7 +4,10 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 50px;
+    padding: 1rem;
+
+    position: sticky;
+    top: 10px;
 
     .divList {
         max-width: 250px;
@@ -14,6 +17,22 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+
+            li {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                height: auto;
+
+                a {
+                    text-decoration: none;
+                }
+
+                :hover {
+                    text-decoration: underline;
+                }
+            }
         }
+
     }
 }
