--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -1,9 +1,8 @@
 .bigBox {
     width: 100%;
     max-width: 1200px;
-    height: 100vh;
     background-color: var(--black);
-    margin-bottom: 2rem ;
+    padding-bottom: 6rem ;
 
     .info {
         line-height: 12px;
@@ -11,14 +10,16 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        margin: 0 0 0 6rem;
-
+        margin: 0 6rem;
         p {
             max-width: 1.125rem;
         }
 
-        h2 {
-            margin-top: 16px;
+        h2 {    
+            margin-top: 1rem;
+        }
+        @media(min-width: 678px){
+            margin: 0 0 0 6rem;
         }
     }
 
@@ -35,14 +36,14 @@
         ul {
             .project li {
                 padding: 2rem 0;
-                width: 450px;
+                max-width: 450px;
                 height: 280px;
                 position: relative;
                 margin: 40px 0;
 
                 .card {
-                    height: 100%;
-                    width: 100%;
+                    height: 95%;
+                    min-width: 480px;
 
                     position: absolute;
                     transform-style: preserve-3d;
@@ -55,8 +56,8 @@
 
 
                         position: absolute;
-                        width: 102%;
-                        height: 94%;
+                        width: 100%;
+                        height: 100%;
                         backface-visibility: hidden;
 
                         padding: 1rem 0;
@@ -81,9 +82,9 @@
                             right: 10px;
                         }
 
-                        @media(min-width: 768px) {
+                        @media(min-width: 678px) {
 
-                            width: 102%;
+                            width: 90%;
                             height: 99.5%;
                         }
                     }
@@ -133,9 +134,8 @@
                         }
                     }
 
-
-                    @media (min-width: 768px) {
-                        width: 480px;
+                    @media(min-width: 678px){
+                        width: 400px;
                     }
 
                     &:hover {
@@ -144,18 +144,19 @@
                 }
             }
         }
-
-        @media(min-width:768px) {
+        @media(min-width: 678px){
+            box-sizing: border-box;
             max-width: 1200px;
-
             ul {
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: space-around;
                 gap: 1.875rem;
 
-                .project li {
-                    margin-bottom: 0;
+                .project{
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: space-evenly;
                 }
             }
 
