--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -1,7 +1,7 @@
 .container {
     max-width: 767px;
     width: 100%;
-    padding: 24px 0 5px 0;
+    padding: 1.5rem 1rem 0.3125rem 1rem;
 
     margin: 0 auto;
     
