--- a/src/components/Technologies/style.module.scss
+++ b/src/components/Technologies/style.module.scss
@@ -11,6 +11,8 @@
     align-items: center;
 
     .infoBox {
+        padding:0 2rem;
+        
         h2 {
             margin: 1rem 0;
         }
