--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -1,13 +1,15 @@
 .container {
     max-width: 767px;
     width: 100%;
-    padding: 1.5rem 1rem 0.3125rem 1rem;
+    padding: 1rem;
 
     margin: 0 auto;
     
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    position: relative;
 
     @media(min-width: 768px) {
         max-width: 1440px;
